--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <body>
         <!-- Navbar -->
          <header class="header">
-            <a href= "#hero" class="logo"><span class="logo-color">Simply</span>.Divine</a>
+            <a href= "#home" class="logo"><span class="logo-color">Simply</span>.Divine</a>
             <nav class="navbar">
-                <a href="#hero" class="active">Home</a>
+                <a href="#home" class="active">Home</a>
                 <a href="#about">About</a>
                 <a href="pages/myWork.html">My Work</a>
                 <a href="#contact">Contact</a>
@@ -25,7 +25,7 @@
         </header>
 
         <!-- Hero section -->
-         <section class="hero" id="hero">
+         <section class="hero" id="home">
             <div class="intro-text">
                 <h3>Hi! Welcome to my site!</h3>
                 <h1>
