--- a/pages/myWork.html
+++ b/pages/myWork.html
@@ -15,7 +15,7 @@
          <header class="header">
             <a href= "#" class="logo"><span class="logo-color">Simply</span>.Divine</a>
             <nav class="navbar">
-                <a href="../index.html">Home</a>
+                <a href="../index.html#home">Home</a>
                 <a href="../index.html#about">About</a>
                 <a href="myWork.html" class="active">My Work</a>
                 <a href="../index.html#contact">Contact</a>
