--- a/pages/about.html
+++ b/pages/about.html
@@ -13,12 +13,12 @@
     <body>
         <!-- Navbar -->
          <header class="header">
-            <a href= "../index.html#home" class="logo"><span class="logo-color">Simply</span>.Divine</a>
+            <a href= "../index" class="logo"><span class="logo-color">Simply</span>.Divine</a>
             <nav class="navbar">
-                <a href="../index.html#home">Home</a>
-                <a href="#about" class="active">About</a>
-                <a href="myWork">My Work</a>
-                <a href="../pages/contact">Contact</a>
+                <a href="../#home">Home</a>
+                <a href="#about">About</a>
+                <a href="../#myWork">My Work</a>
+                <a href="../#contact">Contact</a>
             </nav>
         </header>
     </body>
