--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,9 +15,9 @@
          <header class="header">
             <a href= "#" class="logo"><span class="logo-color">Simply</span>.Divine</a>
             <nav class="navbar">
-                <a href="../index.html#home">Home</a>
-                <a href="../pages/about" class="active">About</a>
-                <a href="myWork">My Work</a>
+                <a href="../#home">Home</a>
+                <a href="../#about">About</a>
+                <a href="../#myWork">My Work</a>
                 <a href="#contact">Contact</a>
             </nav>
         </header>
