--- a/pages/myWork.html
+++ b/pages/myWork.html
@@ -13,12 +13,12 @@
     <body>
         <!-- Navbar -->
          <header class="header">
-            <a href= "#" class="logo"><span class="logo-color">Simply</span>.Divine</a>
+            <a href= "../#home" class="logo"><span class="logo-color">Simply</span>.Divine</a>
             <nav class="navbar">
-                <a href="../index.html#home">Home</a>
-                <a href="../index.html#about">About</a>
-                <a href="myWork.html" class="active">My Work</a>
-                <a href="../index.html#contact">Contact</a>
+                <a href="../#home">Home</a>
+                <a href="../#about">About</a>
+                <a href="#myWork">My Work</a>
+                <a href="../#contact">Contact</a>
             </nav>
         </header>
      
