--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <a href= "#home" class="logo"><span class="logo-color">Simply</span>.Divine</a>
             <nav class="navbar">
                 <a href="#home">Home</a>
-                <a href="../#about">About</a>
-                <a href="../myWork.html">My Work</a>
+                <a href="#about">About</a>
+                <a href="./pages/myWork.html">My Work</a>
                 <a href="#contact">Contact</a>
             </nav>
         </header>
