--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav class="navbar">
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
-                <a href="./pages/myWork.html">My Work</a>
+                <a href="pages/myWork.html">My Work</a>
                 <a href="#contact">Contact</a>
             </nav>
         </header>
