added projects to my work page and did some minimal editing

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=mail" />
 
     </head>
 
@@ -116,9 +117,9 @@
                     </li>
                 </ul>
             </div>
-            <button>
+            <div class="buttons">
                 <a href="pages/myWork.html" class="button">See My Portfolio</a>
-            </button>
+            </div>
 
         </section>
         <!-- Contact Section -->
@@ -127,6 +128,13 @@
             <p>
                 I’m currently looking for new opportunities and projects to work on.<br/>
                 If you are interested in collaborating or hiring me, feel free to reach out!
+            </p>
+
+            <p>
+                <span class="material-symbols-outlined">mail</span> tiwilanreadisa@gmail.com
+                <a href="https://www.linkedin.com/in/tiwi-lanre-adisa-09584a1ab/">
+                    <img src="assets/linkedin-square-logo-svgrepo-com.png" alt="Linkedin Icon">
+                </a>
             </p>
 
             <form action="#">
@@ -142,12 +150,6 @@
         </section>
 
         <footer class="footer">
-            <div class="socials">
-                <a href="https://www.linkedin.com/in/tiwi-lanre-adisa-4b0b1a1b7/"><i class='bx bxl-linkedin-square'></i></a>
-                <a href="#"><i class='bx bxl-github'></i></a>
-                <a href="#"><i class='bx bxl-instagram'></i></a>
-            </div> 
-
             <p>&copy; 2025 Tiwi Lanre-Adisa. All rights reserved.</p>
             <p>Designed by Tiwi Lanre-Adisa</p>
         </footer>
