--- a/pages/myWork.html
+++ b/pages/myWork.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="../style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -40,24 +41,25 @@
                     <div class="work-text">
                         <h2>2. Frontend Web Development</h2>
                     </div>
-                    <img src="../assets/html.png" alt="HTML Icon" class="work-icon">
                 </a>
                 <a href="graphicDesign.html" class="work">
                     <div class="work-text">
                         <h2>3. Graphic Design</h2>
                     </div>
-                    <img src="../assets/canva.png" alt="Canva Icon" class="work-icon">
                 </a>
                 <a href="videoEdit.html" class="work">
                     <div class="work-text">
                         <h2>4. Video Editing</h2>
                     </div>
-                    <img src="../assets/filmora.png" alt="Filmora Icon" class="work-icon">
                 </a>
             </section>
 
-
          </section>
+
+         <footer class="footer">
+            <p>&copy; 2025 Tiwi Lanre-Adisa. All rights reserved.</p>
+            <p>Designed by Tiwi Lanre-Adisa</p>
+        </footer>
 
     </body>
 </html>
