--- a/pages/ux.html
+++ b/pages/ux.html
@@ -8,27 +8,67 @@
         <link rel="stylesheet" href="../style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
 
     <body>
         <!-- Navbar -->
-        <nav class="navbar">
-            <div class="logo">TLA</div>
-            <div class="links">
-                <a href="../home.html">Home</a>
-                <a href="about.html">About</a>
+         <header class="header">
+            <a href= "../#home" class="logo"><span class="logo-color">Simply</span>.Divine</a>
+            <nav class="navbar">
+                <a href="../#home">Home</a>
+                <a href="../#about">About</a>
                 <a href="../pages/myWork.html">My Work</a>
-                <a href="../pages/contact.html">Contact</a>
-            </div>
-        </nav>
+                <a href="../#contact">Contact</a>
+            </nav>
+        </header>
 
         <!-- UX -->
          <section class="ux">
             <div class="ux-text">
                 <h1>UX/UI Design</h1>
-                
 
+                <ul class="ux-list">
+                    <a href="https://drive.google.com/drive/folders/1d6xnC1a2iFk2gs4wb2cmOxNKLCTyr88O?usp=sharing" class="ux-list-item-link">
+                        <li class="ux-list-item">
+                            <img src="../assets/echo mockups.png">
+                            <h3>Echo</h3>
+                            <p>A community-focused platform that connects casual enthusiasts through curated content, aura-based matching, and local event discovery—fostering real-world connections between artists and audiences beyond traditional social media</p>
+                        </li>
+                    </a>
+
+                    <a href="https://drive.google.com/drive/folders/1wrCTa1R_xADZpnCcU94bgnJHv5y-SLGt?usp=sharing" class="ux-list-item-link">
+                        <li class="ux-list-item">
+                            <img src="../assets/neuroux home mockup.png">
+                            <h3>NeuroUX</h3>
+                            <p>A web-based platform where students can learn about UX psychology through videos, activities, and case studies while also connecting with others for in-person workshops and hands-on projects. </p>
+                        </li>
+                    </a>
+
+                    <a href="https://drive.google.com/file/d/1k2q50QLDp8xNfNFS_pvsUQUn3qVHRnJ1/view?usp=drive_link" class="ux-list-item-link">
+                        <li class="ux-list-item">
+                            <img src="../assets/ticketalley home mockup.png">
+                            <h3>Ticket Alley</h3>
+                            <p>A web-based software solution designed to streamline  concert event planning by automating ticketing, seating, payments, attendee management, and feedback collection to improve efficiency and user experience.</p>
+                        </li>
+                    </a>
+
+                    <a href="https://drive.google.com/drive/folders/14khRLxuXnhhUkD0SSQWEWEzkSInjA_NT?usp=drive_link" class="ux-list-item-link">
+                        <li class="ux-list-item">
+                            <img src="../assets/hawkconnect mockups.png">
+                            <h3>HawkConnect</h3>
+                            <p>A centralized platform designed to enhance the Laurier student experience, offering academic support, peer connections, mentorship, and opportunities to engage with clubs and campus activities.</p>
+                        </li>
+                    </a>
+                </ul>
+            </div>
          </section>
+
+        <!-- Footer -->
+         <footer class="footer">
+            <p>&copy; 2025 Tiwi Lanre-Adisa. All rights reserved.</p>
+            <p>Designed by Tiwi Lanre-Adisa</p>
+        </footer>
 
     </body>
 </html>
