edited my individual work pages as well as styling

--- a/pages/myWork.html
+++ b/pages/myWork.html
@@ -28,28 +28,36 @@
          <section class="work-section" id="myWork">
             <div class="work-heading">
                 <h1>My Work</h1>
+                <p>Explore a selection of my projects across various creative and technical disciplines.</p>
             </div>
 
             <section class="work-container">
-                <a href="ux.html" class="work">
+                <a href="ux.html" class="work-item">
+                    <img src="../assets/figma.png" alt="Figma Icon" class="work-icon">
                     <div class="work-text">
                         <h2>1. UX/UI Design</h2>
+                        <p>Crafting intuitive and engaging user experiences for digital products.</p>
                     </div>
-                    <img src="../assets/figma.png" alt="Figma Icon" class="work-icon">
                 </a>
-                <a href="frontend.html" class="work">
+                <a href="frontend.html" class="work-item">
+                    <img src="https://placehold.co/60x60/4A0E4E/DCD0FF?text=DEV" alt="Frontend Icon" class="work-icon">
                     <div class="work-text">
                         <h2>2. Frontend Web Development</h2>
+                        <p>Building responsive and dynamic web interfaces with modern technologies.</p>
                     </div>
                 </a>
-                <a href="graphicDesign.html" class="work">
+                <a href="graphicDesign.html" class="work-item">
+                    <img src="https://placehold.co/60x60/4A0E4E/DCD0FF?text=GD" alt="Graphic Design Icon" class="work-icon">
                     <div class="work-text">
                         <h2>3. Graphic Design</h2>
+                        <p>Creating visually compelling graphics for branding, marketing, and more.</p>
                     </div>
                 </a>
-                <a href="videoEdit.html" class="work">
+                <a href="videoEdit.html" class="work-item">
+                    <img src="https://placehold.co/60x60/4A0E4E/DCD0FF?text=VE" alt="Video Editing Icon" class="work-icon">
                     <div class="work-text">
                         <h2>4. Video Editing</h2>
+                        <p>Transforming raw footage into polished and engaging video content.</p>
                     </div>
                 </a>
             </section>
