--- a/pages/ux.html
+++ b/pages/ux.html
@@ -15,7 +15,14 @@
         <!-- Navbar -->
          <header class="header">
             <a href= "../#home" class="logo"><span class="logo-color">Simply</span>.Divine</a>
-            <nav class="navbar">
+
+            <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+
+            <nav class="navbar" id="navbar">
                 <a href="../#home">Home</a>
                 <a href="../#about">About</a>
                 <a href="../pages/myWork.html">My Work</a>
@@ -69,6 +76,25 @@
             <p>&copy; 2025 Tiwi Lanre-Adisa. All rights reserved.</p>
             <p>Designed by Tiwi Lanre-Adisa</p>
         </footer>
+
+        <script>
+            const hamburger = document.getElementById("hamburger");
+            const navbar = document.getElementById("navbar");
+            const navLinks = navbar.querySelectorAll("a");
+
+            hamburger.addEventListener("click", () => {
+                hamburger.classList.toggle("open");
+                navbar.classList.toggle("active");
+            });
+
+            // Close the menu when any link is clicked
+            navLinks.forEach(link => {
+                link.addEventListener("click", () => {
+                hamburger.classList.remove("open");
+                navbar.classList.remove("active");
+                });
+            });
+        </script>
 
     </body>
 </html>
