--- a/pages/videoEdit.html
+++ b/pages/videoEdit.html
@@ -28,6 +28,31 @@
             <h1>👀 Something cool is coming!</h1>
             <p>I'm still designing this page to give you the best look at my work. Stay tuned!</p>
         </section>
+
+        <!-- Footer -->
+         <footer class="footer">
+            <p>&copy; 2025 Tiwi Lanre-Adisa. All rights reserved.</p>
+            <p>Designed by Tiwi Lanre-Adisa</p>
+        </footer>
+
+        <script>
+            const hamburger = document.getElementById("hamburger");
+            const navbar = document.getElementById("navbar");
+            const navLinks = navbar.querySelectorAll("a");
+
+            hamburger.addEventListener("click", () => {
+                hamburger.classList.toggle("open");
+                navbar.classList.toggle("active");
+            });
+
+            // Close the menu when any link is clicked
+            navLinks.forEach(link => {
+                link.addEventListener("click", () => {
+                hamburger.classList.remove("open");
+                navbar.classList.remove("active");
+                });
+            });
+        </script>
         
     </body>
 </html>
