added hamburger menu

--- a/pages/graphicDesign.html
+++ b/pages/graphicDesign.html
@@ -15,6 +15,13 @@
         <!-- Navbar -->
          <header class="header">
             <a href= "../#home" class="logo"><span class="logo-color">Simply</span>.Divine</a>
+
+             <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+
             <nav class="navbar">
                 <a href="../#home">Home</a>
                 <a href="../#about">About</a>
@@ -28,6 +35,31 @@
             <h1>👀 Something cool is coming!</h1>
             <p>I'm still designing this page to give you the best look at my work. Stay tuned!</p>
         </section>
+
+        <!-- Footer -->
+         <footer class="footer">
+            <p>&copy; 2025 Tiwi Lanre-Adisa. All rights reserved.</p>
+            <p>Designed by Tiwi Lanre-Adisa</p>
+        </footer>
+
+        <script>
+            const hamburger = document.getElementById("hamburger");
+            const navbar = document.getElementById("navbar");
+            const navLinks = navbar.querySelectorAll("a");
+
+            hamburger.addEventListener("click", () => {
+                hamburger.classList.toggle("open");
+                navbar.classList.toggle("active");
+            });
+
+            // Close the menu when any link is clicked
+            navLinks.forEach(link => {
+                link.addEventListener("click", () => {
+                hamburger.classList.remove("open");
+                navbar.classList.remove("active");
+                });
+            });
+        </script>
         
     </body>
 </html>
