--- a/pages/frontend.html
+++ b/pages/frontend.html
@@ -15,6 +15,13 @@
         <!-- Navbar -->
          <header class="header">
             <a href= "../#home" class="logo"><span class="logo-color">Simply</span>.Divine</a>
+
+             <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            
             <nav class="navbar">
                 <a href="../#home">Home</a>
                 <a href="../#about">About</a>
