edited styling and home page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         
             <nav class="navbar" id="navbar">
                 <a href="#home">Home</a>
-                <a href="#about">About</a>
+                <a href="pages/about.html">About</a>
                 <a href="pages/myWork.html">My Work</a>
                 <a href="#contact">Contact</a>
             </nav>
@@ -43,52 +43,58 @@
                 </h1>
                 
                 <div class="buttons">
-                    <a href="pages/myWork.html" class="button">See My Work</a>
+                    <a href="https://drive.google.com/file/d/1iNuqWVcNUaipVqsaZZ-YnzjLXGE-oqs4/view?usp=drive_link" class="button">See My Resume</a>
                 </div>
             </div>
-            <div class="personal-photo-container">
-                <img src="assets/pfp2.png" alt="Profile Picture" class="personal-photo">
-            </div>
+           <!--<div class="personal-photo-container">
+                <img src="assets/profile-pic.jpeg" alt="Profile Picture" class="personal-photo">
+            </div> -->
         </section>
 
-        <!-- About section -->
-        <section class="about" id="about">
-        <!--<div class="about-photo">
-                <img src="../assets/pfp2.png" alt="Profile Picture">
-            </div>
-        -->
+        <!--My Work -->
+        <section class="ux">
+            <div class="ux-text">
+                <h1>UX/UI Design Projects</h1>
 
-            <div class="about-text">
-                <h2>About <span class="me-highlight">Me</span></h2>
+                <ul class="ux-list">
+                    <a href="https://drive.google.com/drive/folders/1d6xnC1a2iFk2gs4wb2cmOxNKLCTyr88O?usp=sharing" class="ux-list-item-link">
+                        <li class="ux-list-item">
+                            <img src="../assets/echo mockups.png">
+                            <h3>Echo</h3>
+                            <p>A community-focused platform that connects casual enthusiasts through curated content, aura-based matching, and local event discovery—fostering real-world connections between artists and audiences beyond traditional social media</p>
+                        </li>
+                    </a>
 
-                <p>
-                    I’m a 4th-year Computer Science student at Wilfrid Laurier University, <br/> focusing on <span class="text-highlight">Web Development and UX/UI design</span>. Passionate about creating 
-                    <br/>intuitive websites and user-friendly interfaces, I combine my technical skills with a strong eye 
-                    <br/>for design. I’m eager to expand my expertise in front-end development and UX/UI 
-                    <br/>design while gaining real-world experience in collaborative projects.
-                </p>
+                    <a href="https://drive.google.com/drive/folders/1wrCTa1R_xADZpnCcU94bgnJHv5y-SLGt?usp=sharing" class="ux-list-item-link">
+                        <li class="ux-list-item">
+                            <img src="../assets/neuroux home mockup.png">
+                            <h3>NeuroUX</h3>
+                            <p>A web-based platform where students can learn about UX psychology through videos, activities, and case studies while also connecting with others for in-person workshops and hands-on projects. </p>
+                        </li>
+                    </a>
 
-                <ul>
-                    <li>
-                        <img src="./assets/code-icon.png">
-                        <h3>Languages</h3>
-                        <p>HTML, CSS, JavaScript, Python, Java, C/C++/C#, SQL</p>
-                    </li>
+                    <a href="https://drive.google.com/file/d/1k2q50QLDp8xNfNFS_pvsUQUn3qVHRnJ1/view?usp=drive_link" class="ux-list-item-link">
+                        <li class="ux-list-item">
+                            <img src="../assets/ticketalley home mockup.png">
+                            <h3>Ticket Alley</h3>
+                            <p>A web-based software solution designed to streamline  concert event planning by automating ticketing, seating, payments, attendee management, and feedback collection to improve efficiency and user experience.</p>
+                        </li>
+                    </a>
 
-                    <li>
-                        <img src="./assets/school-icon.png">
-                        <h3>Education</h3>
-                        <p>BSc in Computer Science with Minor in User Experience Design, Wilfrid Laurier University </p>
-                    </li>
-
-                    <li>
-                        <img src="./assets/tools-icon.png">
-                        <h3>Tools</h3>
-                        <p>Figma, SQL Developer, Eclipse, Canva, Github, VSCode</p>
-                    </li>
+                    <a href="https://drive.google.com/drive/folders/14khRLxuXnhhUkD0SSQWEWEzkSInjA_NT?usp=drive_link" class="ux-list-item-link">
+                        <li class="ux-list-item">
+                            <img src="../assets/hawkconnect mockups.png">
+                            <h3>HawkConnect</h3>
+                            <p>A centralized platform designed to enhance the Laurier student experience, offering academic support, peer connections, mentorship, and opportunities to engage with clubs and campus activities.</p>
+                        </li>
+                    </a>
                 </ul>
             </div>
-        </section>
+            <div class="buttons">
+                <a href="pages/myWork.html" class="button">View More Projects</a>
+            </div>
+
+         </section>
 
         <!-- My Services Section -->
          <section class="services">
@@ -123,9 +129,6 @@
                             that leave a lasting impression and communicate your message with clarity and creativity.</p>
                     </li>
                 </ul>
-            </div>
-            <div class="buttons">
-                <a href="pages/myWork.html" class="button">See My Portfolio</a>
             </div>
 
         </section>
