--- a/pages/ux.html
+++ b/pages/ux.html
@@ -33,7 +33,7 @@
         <!-- UX -->
          <section class="ux">
             <div class="ux-text">
-                <h1>UX/UI Design</h1>
+                <h1>UX/UI Design Projects</h1>
 
                 <ul class="ux-list">
                     <a href="https://drive.google.com/drive/folders/1d6xnC1a2iFk2gs4wb2cmOxNKLCTyr88O?usp=sharing" class="ux-list-item-link">
