--- a/pages/myWork.html
+++ b/pages/myWork.html
@@ -24,7 +24,7 @@
 
             <nav class="navbar" id="navbar">
                 <a href="../#home">Home</a>
-                <a href="../#about">About</a>
+                <a href="about.html">About</a>
                 <a href="#myWork">My Work</a>
                 <a href="../#contact">Contact</a>
             </nav>
