--- a/pages/about.html
+++ b/pages/about.html
@@ -14,7 +14,7 @@
     <body>
         <!-- Navbar -->
          <header class="header">
-            <a href= "#" class="logo"><span class="logo-color">Simply</span>.Divine</a>
+            <a href= "../#home" class="logo"><span class="logo-color">Simply</span>.Divine</a>
 
             <div class="hamburger" id="hamburger">
                 <span></span>
@@ -26,7 +26,7 @@
                 <a href="/index.html">Home</a>
                 <a href="#about">About</a>
                 <a href="/pages/myWork.html">My Work</a>
-                <a href="../#contact">Contact</a>
+                <a href="../pages/contact.html">Contact</a>
             </nav>
         </header>
 
