edited links again

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <ul class="ux-list">
                     <a href="https://drive.google.com/drive/folders/1d6xnC1a2iFk2gs4wb2cmOxNKLCTyr88O?usp=sharing" class="ux-list-item-link">
                         <li class="ux-list-item">
-                            <img src="/assets/echo mockups.png">
+                            <img src="assets/echo mockups.png">
                             <h3>Echo</h3>
                             <p>A community-focused platform that connects casual enthusiasts through curated content, aura-based matching, and local event discovery—fostering real-world connections between artists and audiences beyond traditional social media</p>
                         </li>
@@ -67,7 +67,7 @@
 
                     <a href="https://drive.google.com/drive/folders/1wrCTa1R_xADZpnCcU94bgnJHv5y-SLGt?usp=sharing" class="ux-list-item-link">
                         <li class="ux-list-item">
-                            <img src="/assets/neuroux home mockup.png">
+                            <img src="assets/neuroux home mockup.png">
                             <h3>NeuroUX</h3>
                             <p>A web-based platform where students can learn about UX psychology through videos, activities, and case studies while also connecting with others for in-person workshops and hands-on projects. </p>
                         </li>
@@ -75,7 +75,7 @@
 
                     <a href="https://drive.google.com/file/d/1k2q50QLDp8xNfNFS_pvsUQUn3qVHRnJ1/view?usp=drive_link" class="ux-list-item-link">
                         <li class="ux-list-item">
-                            <img src="/assets/ticketalley home mockup.png">
+                            <img src="assets/ticketalley home mockup.png">
                             <h3>Ticket Alley</h3>
                             <p>A web-based software solution designed to streamline  concert event planning by automating ticketing, seating, payments, attendee management, and feedback collection to improve efficiency and user experience.</p>
                         </li>
@@ -83,7 +83,7 @@
 
                     <a href="https://drive.google.com/drive/folders/14khRLxuXnhhUkD0SSQWEWEzkSInjA_NT?usp=drive_link" class="ux-list-item-link">
                         <li class="ux-list-item">
-                            <img src="/assets/hawkconnect mockups.png">
+                            <img src="assets/hawkconnect mockups.png">
                             <h3>HawkConnect</h3>
                             <p>A centralized platform designed to enhance the Laurier student experience, offering academic support, peer connections, mentorship, and opportunities to engage with clubs and campus activities.</p>
                         </li>
