--- a/pages/about.html
+++ b/pages/about.html
@@ -25,8 +25,8 @@
             <nav class="navbar" id="navbar">
                 <a href="/index.html">Home</a>
                 <a href="#about">About</a>
-                <a href="/pages/myWork.html">My Work</a>
-                <a href="../pages/contact.html">Contact</a>
+                <a href="./myWork.html">My Work</a>
+                <a href="../#contact">Contact</a>
             </nav>
         </header>
 
