edited links again!

--- a/pages/about.html
+++ b/pages/about.html
@@ -23,7 +23,7 @@
             </div>
 
             <nav class="navbar" id="navbar">
-                <a href="/index.html">Home</a>
+                <a href="../index.html">Home</a>
                 <a href="#about">About</a>
                 <a href="./myWork.html">My Work</a>
                 <a href="../#contact">Contact</a>
