--- a/pages/graphicDesign.html
+++ b/pages/graphicDesign.html
@@ -22,7 +22,7 @@
                 <span></span>
             </div>
 
-            <nav class="navbar">
+            <nav class="navbar" id="navbar">
                 <a href="../#home">Home</a>
                 <a href="../#about">About</a>
                 <a href="../pages/myWork.html">My Work</a>
