--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                 </a>
             </p>
 
-            <form action="#">
-
+            <form action="https://formspree.io/f/manjjgrr" method="POST">
+                
                 <div class="input-box">
                     <input type="text" placeholder="Your Name">
                     <input type="email"placeholder="Email Address">
