--- a/index.html
+++ b/index.html
@@ -148,14 +148,16 @@
             </p>
 
             <form action="https://formspree.io/f/manjjgrr" method="POST">
-                
+
                 <div class="input-box">
                     <input type="text" placeholder="Your Name">
                     <input type="email"placeholder="Email Address">
                 </div>
 
                 <textarea name="" id="" cols="30" rows= "10" placeholder="Your Message"></textarea>
-                <input type="submit" value="Send Message" class="button">
+
+                <button type="submit" class="button">Send Message</button>
+
             </form>
         </section>
 
