ok... contact form should work

--- a/index.html
+++ b/index.html
@@ -148,16 +148,14 @@
             </p>
 
             <form action="https://formspree.io/f/manjjgrr" method="POST">
-
                 <div class="input-box">
-                    <input type="text" placeholder="Your Name">
-                    <input type="email"placeholder="Email Address">
+                    <input type="text" name="name" placeholder="Your Name" required>
+                    <input type="email" name="email" placeholder="Email Address" required>
                 </div>
 
-                <textarea name="" id="" cols="30" rows= "10" placeholder="Your Message"></textarea>
+                <textarea name="message" cols="30" rows="10" placeholder="Your Message" required></textarea>
 
                 <button type="submit" class="button">Send Message</button>
-
             </form>
         </section>
 
