icons should show up now

--- a/pages/about.html
+++ b/pages/about.html
@@ -51,19 +51,19 @@
             <div class="about-skills">
                 <ul>
                     <li>
-                        <img src="/assets/code-icon.png">
+                        <img src="../assets/code-icon.png">
                         <h3>Languages</h3>
                         <p>HTML, CSS, JavaScript, Python, Java, C/C++/C#, SQL</p>
                     </li>
 
                     <li>
-                        <img src="/assets/school-icon.png">
+                        <img src="../assets/school-icon.png">
                         <h3>Education</h3>
                         <p>BSc in Computer Science with Minor in User Experience Design, Wilfrid Laurier University </p>
                     </li>
 
                     <li>
-                        <img src="/assets/tools-icon.png">
+                        <img src="../assets/tools-icon.png">
                         <h3>Tools</h3>
                         <p>Figma, SQL Developer, Eclipse, Canva, Github, VSCode</p>
                     </li>
