Added more projects, deleted unnecessary pages

--- a/pages/ux.html
+++ b/pages/ux.html
@@ -36,6 +36,26 @@
                 <h1>UX/UI Design Projects</h1>
 
                 <ul class="ux-list">
+                    <a href="../pages/thera.html" class="ux-list-item-link">
+                        <li class="ux-list-item">
+                            <img src="../assets/theralink.png">
+                            <h3>TheraLink</h3>
+                            <p>A teletherapy platform that simplifies mental health support by connecting users with licensed therapists and providing integrated wellness tools.</p>
+                        </li>
+                    </a>
+                    <a href="#" class="ux-list-item-link">
+                        <li class="ux-list-item">
+                            <img src="../assets/tutorme.png">
+                            <h3>TutorMe</h3>
+                            <p>A user-centered web and mobile platform designed to seamlessly connect students with qualified tutors and provide intuitive tools for managing their learning journey.</p>
+                        </li>
+                    </a>
+                    <a href="#" class="ux-list-item-link">
+                        <li class="ux-list-item">
+                            <img src="../assets/quickeats.png">
+                            <h3>QuickEats</h3>
+                            <p>A mobile food ordering app that offers a seamless and delightful user experience, addressing key user concerns such as delivery speed, affordability, app usability, and transparency.</p>
+                        </li>
                     <a href="https://drive.google.com/drive/folders/1d6xnC1a2iFk2gs4wb2cmOxNKLCTyr88O?usp=sharing" class="ux-list-item-link">
                         <li class="ux-list-item">
                             <img src="../assets/echo mockups.png">
