TheraLink case study edits

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </h1>
                 
                 <div class="buttons">
-                    <a href="https://drive.google.com/file/d/1iNuqWVcNUaipVqsaZZ-YnzjLXGE-oqs4/view?usp=drive_link" class="button">See My Resume</a>
+                    <a href="https://drive.google.com/file/d/1f0ogGYgNutyMT49uIL5DI_o599y9FGM-/view?usp=sharing" class="button">See My Resume</a>
                 </div>
             </div>
            <!--<div class="personal-photo-container">
